styles.css
@import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  overflow-x: hidden;
}
:root {
  --cyan: hsl(171, 66%, 44%);
  --blue: hsl(233, 100%, 69%);
  --darkgrayish: hsl(210, 10%, 33%);
  --grayishblue: hsl(201, 11%, 66%);
}

p {
  padding: 0;
  max-width: 500px;
  width: 100%;
  color: var(--grayishblue);
  font-size: 18px;
}

.flexcol {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 10px;
  text-align: center;
}
button {
  outline: none;
  border: none;
  padding: 10px 15px;
  color: white;
}

header {
  width: 100vw;
  height: 100vh;
  font-family: "Bai Jamjuree", sans-serif;
  background-image: url("./Assets/bg-header-desktop.png");
  background-repeat: no-repeat;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  gap: 15px;
}
main {
  margin: 100px 0px;
}
.btn-container {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 20px;
  flex-wrap: wrap;
}
.ios-button {
  background-color: var(--cyan);
  border-radius: 50px;
  width: 250px;
  box-shadow: 0px 3px 0px #199494;
}
.mac-button {
  background-color: var(--blue);
  border-radius: 50px;
  width: 250px;
  box-shadow: 0px 3px 0px  #3e52ec;
}
.partners-section {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  gap: 10px;
}
.partners-section img {
  margin: 0px auto;
}

footer {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  background-color: #e3f8f8;
  place-items: center;
  padding: 30px 0px;
}
footer section {
     flex-basis: 80%;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 2fr;
    justify-content: space-evenly;
}
footer p {
  color: black;
}

@media (width<=767px) {
  header {
    background-image: url("./Assets/bg-header-mobile.png");
  }
  p {
    padding: 0px 5px;
    text-align: center;
  }
  .partners-section {
    grid-template-columns: 1fr;
    gap: 30px;
  }
   footer section{
    grid-template-columns: 1fr;
    margin: 0px auto;
   }
}

@media (768px <= width <= 991px) {
  .partners-section {
    grid-template-columns: repeat(3, 1fr);
    row-gap: 25px;
  }
}

